--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@ html {
 </head>
 <body>
 
-<section id='about' class="about-section">
+<!-- About Section -->
+<section id="about" class="text-center py-5">
   <div class="container">
-    <h2>About</h2>
-    <img src="file:///C:/Users/lao/Pictures/Profilepic.PNG" alt="About Me">
-    <p>Hello, I'm Linda.
-      <p>A little over a year ago, I decided to teach myself data science.</p>
-      <p>I started by taking Harvard's CS50 course after enrolling online in edx.</p>
-      <p>That course was the beginning of what I hope will be a lifelong journey in this field.</p>
-      <p>Taking that course made me realize that I could learn anythin I wanted to as long as I had access.</p>Taking that course made me realize that I could learn anythin I wanted to as long as I had access.
-
-      <p>Access to the internet.</p>
-      <p>Access to information.</p>
-      <p>As long as I have access and I put my mind to it, I can learn anything I wish to learn.</p>
-    <p>The democratization of education has made learning accessible to willing students all over the world, and I am a testament to that.</p>
+    <h2 class="display-4">About</h2>
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-4">
+        <img src="images/about.jpg" alt="Profile Image" class="img-fluid rounded-circle border border-dark mb-4">
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <p class="lead">Hello, I'm Linda, an Assistant Sales Manager at Ronnefeldt, where I specialize in international sales and customer support. My role allows me to combine my passion for tea with my expertise in sales, helping to drive our brand's global presence.</p>
+        <p class="lead">I recently earned the "Geprüfte Handelsfachwirtin" certification, a testament to my commitment to continuous professional growth. I'm currently sharpening my skills in Excel and Data Analysis, with a vision to transition into a Business Analyst role. Through my dedication to learning and professional development, I aim to make a significant impact in the IT and business analysis sectors.</p>
+      </div>
+    </div>
   </div>
 </section>
-
 
 <!-- Projects Section -->
 <section id="projects" class="projects-section bg-light" id="projects">
