--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ html {
         </a>
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://medium.com/@yourusername" target="_blank">
+        <a href="https://medium.com/@lindaolela" target="_blank">
           <img src="https://miro.medium.com/v2/resize:fit:1200/0*K79yRSwdXz2Ll2tP.png" alt="Medium" class="social-icon">
           Medium
         </a>
