--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ html {
         </a>
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://github.com/yourusername" target="_blank">
-          <img src="file:///C:/Users/lao/Pictures/github.png" alt="GitHub" class="social-icon">
+        <a href="https://github.com/olela28" target="_blank">
+          <img src="github.png" alt="GitHub" class="social-icon">
           GitHub
         </a>
       </div>
