--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@ html {
       <!-- Project 1 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="file:///C:/Users/lao/Pictures/1.jpg" class="card-img-top" alt="Project 1">
+          <img src="https://learn.microsoft.com/en-us/fabric/media/fabric-icon.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">Project 1</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
-            <a href="#" class="btn btn-primary">Blog Post</a>
+            <a href="https://medium.com/@lindaolela/transforming-data-with-microsoft-fabric-a-step-by-step-guide-for-beginners-a92098f6cd4c" class="btn btn-primary">Blog Post</a>
             <a href="#" class="btn btn-secondary">Source Code</a>
           </div>
         </div>
