--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ html {
         <div class="card">
           <img src="https://learn.microsoft.com/en-us/fabric/media/fabric-icon.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Project 1</h5>
+            <h5 class="card-title">Data Transformation Project</h5>
             <p class="card-text">A detailted walkthrough of how to clean, enrich and model data using tools like Dataflows Gen 2, Lakehouse SQL endpoints and Spark Notebooks. Whether you're new to data transformation or looking to enhance your skills, this guide covers what you need to know to get started.</p>
             <a href="https://medium.com/@lindaolela/transforming-data-with-microsoft-fabric-a-step-by-step-guide-for-beginners-a92098f6cd4c" class="btn btn-primary">Blog Post</a>
             <a href="#" class="btn btn-secondary">Source Code</a>
