--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@ html {
       <!-- Project 2 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="file:///C:/Users/lao/Pictures/2.jpg" class="card-img-top" alt="Project 2">
+          <img src="https://repository-images.githubusercontent.com/614691172/0c2bee49-690f-4863-ab79-bf056fec0e74" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Project 2</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
-            <a href="#" class="btn btn-primary">Blog Post</a>
-            <a href="#" class="btn btn-secondary">Source Code</a>
+            <a href="https://medium.com/@lindaolela/how-i-solved-the-mystery-of-the-stolen-cs50-duck-9f08805db692" class="btn btn-primary">Blog Post</a>
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary">Source Code</a>
           </div>
         </div>
       </div>
