--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ html {
         <div class="card">
           <img src="https://repository-images.githubusercontent.com/614691172/0c2bee49-690f-4863-ab79-bf056fec0e74" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Project 2</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
+            <h5 class="card-title">Data Analysis using SQL</h5>
+            <p class="card-text">Methodical problem-solving using SQL. Learn about best practices in query writing and data analysis. This project illustrated the power of structured queries in uncovering hidden connections within data.</p>
             <a href="https://medium.com/@lindaolela/how-i-solved-the-mystery-of-the-stolen-cs50-duck-9f08805db692" class="btn btn-primary">Blog Post</a>
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary">Source Code</a>
           </div>
