--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ html {
           <img src="https://repository-images.githubusercontent.com/614691172/0c2bee49-690f-4863-ab79-bf056fec0e74" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Data Analysis using SQL</h5>
-            <p class="card-text">Methodical problem-solving using SQL. Learn about best practices in query writing and data analysis. This project illustrated the power of structured queries in uncovering hidden connections within data.</p>
+            <p class="card-text"> Methodical problem-solving using SQL. Learn about best practices in query writing and data analysis. This project illustrated the power of structured queries in uncovering hidden connections within data.</p>
             <a href="https://medium.com/@lindaolela/how-i-solved-the-mystery-of-the-stolen-cs50-duck-9f08805db692" class="btn btn-primary">Blog Post</a>
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary">Source Code</a>
           </div>
@@ -275,7 +275,7 @@ html {
     <div class="row">
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://www.linkedin.com/in/linda-olela-1794362a0/" target="_blank">
-          <img src="file:///C:/Users/lao/Pictures/linkedin.png" alt="LinkedIn" class="social-icon">
+          <img src="https://logospng.org/download/linkedin/logo-linkedin-icon-1536.png" alt="LinkedIn" class="social-icon">
           LinkedIn
         </a>
       </div>
