--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ html {
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://github.com/olela28" target="_blank">
-          <img src="github.png" alt="GitHub" class="social-icon">
+          <img src="olela28/my-website/Github.png" alt="GitHub" class="social-icon">
           GitHub
         </a>
       </div>
