--- a/index.html
+++ b/index.html
@@ -265,14 +265,6 @@ html {
   <div class="container">
     <h2>Contact Me</h2>
     <div class="row">
-      <div class="col-lg-6">
-        <p><i class="fas fa-envelope"></i> olelalinda@gmail.com</p>
-      </div>
-      <div class="col-lg-6">
-        <p><i class="fas fa-phone"></i> 415xxxxxxx</p>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://www.linkedin.com/in/linda-olela-1794362a0/" target="_blank">
           <img src="https://logospng.org/download/linkedin/logo-linkedin-icon-1536.png" alt="LinkedIn" class="social-icon">
@@ -282,6 +274,7 @@ html {
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://github.com/olela28" target="_blank">
           <img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt="GitHub" class="social-icon">
+          GitHub
         </a>
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
@@ -289,6 +282,9 @@ html {
           <img src="https://miro.medium.com/v2/resize:fit:1200/0*K79yRSwdXz2Ll2tP.png" alt="Medium" class="social-icon">
           Medium
         </a>
+      </div>
+      <div class="col-lg-6">
+        <p><i class="fas fa-envelope"></i> olelalinda@gmail.com</p>
       </div>
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://youtube.com/c/yourchannel" target="_blank">
