--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ html {
 </section>
 
 <!-- Contact Me Section -->
-<section id="contact" class="contact-section text-center text-white bg-blue">
+<section id="contact" class="contact-section text-center text-white bg-dark">
   <div class="container">
     <h2>Contact Me</h2>
     <div class="row">
