--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ html {
           <img src="file:///C:/Users/lao/Pictures/3.jpg" class="card-img-top" alt="Project 3">
           <div class="card-body">
             <h5 class="card-title">Project 3</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisl erat. Sed et purus ornare, eleifend tellus ut, fermentum arcu.</p>
+            <p class="card-text">Skilled in front-end and back-end development. Completed a project building a Flask web app with dynamic frontend-backend interactions. Experienced with GitHub for version control and project hosting.
+              Technologies used include:</p>
             <a href="#" class="btn btn-primary">Blog Post</a>
             <a href="#" class="btn btn-secondary">Source Code</a>
           </div>
