--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ html {
 <body>
 
   <h2>About</h2>
-  <img src="/static/Github.png" alt="About Me">
+  <img src="/static/Profilepic.PNG" alt="About Me">
   <p></p>
   <p>Hello, I'm Linda.</p>
   <p>A little over a year ago, I decided to teach myself data science.</p>
