--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
   <h2>About</h2>
-  <img src="/static/Profilepic.PNG" alt="About Me">
+  <img src="/static/pictures/Profilepic.PNG" alt="About Me">
   <p></p>
   <p>Hello, I'm Linda.</p>
-  <p>A little over a year ago, I decided to teach myself data science.</p>
+  <p class="text-center">A little over a year ago, I decided to teach myself data science.</p>
   <p>I started by taking Harvard's CS50 course after enrolling online in edx.</p>
   <p>That course was the beginning of what I hope will be a lifelong journey in this field.</p>
   <p>Taking that course made me realize that I could learn anything I wanted to as long as I had access.</p>
