--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
       <!-- Project 3 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="file:///C:/Users/lao/Pictures/3.jpg" class="card-img-top" alt="Project 3">
+          <img src="static/pictures/dice.jpg" class="card-img-top" alt="Project 3">
           <div class="card-body">
             <h5 class="card-title">Project 3</h5>
             <p class="card-text">Skilled in front-end and back-end development. Completed a project building a Flask web app with dynamic frontend-backend interactions. Experienced with GitHub for version control and project hosting.
               Technologies used include:</p>
+              <ul>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>SQLite</li>
+              </ul>
             <a href="#" class="btn btn-primary">Blog Post</a>
             <a href="#" class="btn btn-secondary">Source Code</a>
           </div>
