--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio</title>
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Linda's Portfolio</title>
 <!-- Bootstrap CSS -->
- <link rel="stylesheet" href="static/stylesheet.css">
+<link rel="stylesheet" href="static/stylesheet.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<style>
+  body {
+    background-color: #121212;
+    color: #e0e0e0;
+  }
+  .navbar, .footer {
+    background-color: #1f1f1f;
+  }
+  .navbar-brand, .nav-link, .footer {
+    color: #e0e0e0;
+  }
+  a.nav-link:hover {
+    color: #bb86fc;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    color: #bb86fc;
+  }
+  .card {
+    background-color: #2b2b2b;
+  }
+</style>
 
 
 
