--- a/index.html
+++ b/index.html
@@ -30,25 +30,17 @@
     background-color: #2b2b2b;
   }
 </style>
-
-
-
 </head>
 <body>
 
-  <h2>About</h2>
-  <img src="/static/pictures/Profilepic.PNG" alt="About Me">
-  <p></p>
-  <p>Hello, I'm Linda.</p>
-  <p class="text-center">A little over a year ago, I decided to teach myself data science.</p>
-  <p>I started by taking Harvard's CS50 course after enrolling online in edx.</p>
-  <p>That course was the beginning of what I hope will be a lifelong journey in this field.</p>
-  <p>Taking that course made me realize that I could learn anything I wanted to as long as I had access.</p>
-  <p>Access to the internet.</p>
-  <p>Access to information.</p>
-  <p>As long as I have access and I put my mind to it, I can learn anything I wish to learn.</p>
-  <p>The democratization of education has made learning accessible to willing students all over the world, and I am a testament to that.</p>
-  
+  <!-- Home Section -->
+   <section id="home" class="container text-center py-5">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Hi, Im Linda a passionate software developer and data analyst based in Frankfurt. Want to know how I may help your projects</p>
+    <button>Learn More</button>
+
+   </section>
+
 
 <!-- Projects Section -->
 <section id="projects" class="projects-section bg-light" id="projects">
@@ -84,7 +76,7 @@
         <div class="card">
           <img src="static/pictures/dice.jpg" class="card-img-top" alt="Project 3">
           <div class="card-body">
-            <h5 class="card-title">Project 3</h5>
+            <h5 class="card-title">Flask Stock Trading App</h5>
             <p class="card-text">Skilled in front-end and back-end development. Completed a project building a Flask web app with dynamic frontend-backend interactions. Experienced with GitHub for version control and project hosting.
               Technologies used include:</p>
               <ul>
@@ -191,7 +183,7 @@
 <!-- Sticky Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#home">Portfolio</a>
+    <a class="navbar-brand" href="#">Linda's Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -201,13 +193,16 @@
           <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#blog">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
