--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 
 
 <!-- Skills Section -->
-<section id="skills" class="skills-section bg-white" id="skills">
-  <div class="container">
-    <h2 class="text-center">Skills</h2>
+<section id="skills" class="container py-5">
+  <h2 class="text-center">Skills</h2>
     <div class="row">
       <!-- Skill 1 -->
       <div class="col-lg-3 col-md-6 mb-4">
@@ -150,10 +149,22 @@
   </div>
 </section>
 
+<!-- Blog Section -->
+ <section id="blog" class="container py-5">
+  <h2>Blog</h2>
+  <p>Check out my latest articles on Medium and LinkedIn about software development and data analysis.</p>
+ </section>
+
+ <!-- About Section -->
+ <section id="about" class="container py-5">
+  <h2>About Me</h2>
+  <p>I am a software developer with a strong interest in full-stack development and business analytics. My projects include....</p>
+ </section>
+
 <!-- Contact Me Section -->
-<section id="contact" class="contact-section text-center text-white bg-dark">
-  <div class="container">
-    <h2>Contact Me</h2>
+<section id="contact" class="container py-5">
+  <h2>Contact Me</h2>
+  <p>Get in touch with me via email or follow me on GitHub or LinkedIn.</p>
     <div class="row">
       <div class="col-lg-2 col-md-4 mb-4">
         <a href="https://www.linkedin.com/in/linda-olela-1794362a0/" target="_blank">
