--- a/index.html
+++ b/index.html
@@ -158,7 +158,24 @@
  <!-- About Section -->
  <section id="about" class="container py-5">
   <h2>About Me</h2>
-  <p>I am a software developer with a strong interest in full-stack development and business analytics. My projects include....</p>
+  <p>
+    Hi, I'm <strong>Linda</strong,> a dedicated software developer with a passion for solving real-world problems through technology.
+    My journey into software development bagan when I realised how much I enjoyed building and automating solutions, 
+    whether through Python scripting or web development.
+  </p>
+  <p>
+    I've worked on a variety of projects, including a <strong>Flask</strong>, <strong>JavaScript</strong>, and <strong>Excel</strong>
+    has allowed me to develop a versatile skill set that I continue to expand.
+  </p>
+  <p>
+    Currently, I'm focussed on deepening my knowledge of <strong>Microsoft Fabric</strong> and software development, as I aim to bridge 
+    the gap between business analytics and software engineering.
+    My ultimate goal is to transition into roles that combine my analytical and technical skills, such as a <strong>Data Engineer</strong>, <strong>Business Intelligence Developer</strong>
+    or a <strong>Full-stack developer</strong>.
+  </p>
+  <p>
+    Outside of coding, I enjoy writing about my projects and sharing insights with the developer community through platforms like <strong>Medium</strong> and <strong>LinkedIn</strong>.
+  </p>
  </section>
 
 <!-- Contact Me Section -->
