--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
     color: #bb86fc;
   }
   .card {
-    background-color: #2b2b2b;
+    background-color: #1e1e1e;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s ease;
+  }
+  .card:hover {
+    transform: scale(1.05);
+  }
+  .card-title {
+    color: #ffcc00;
+  }
+  .btn-primary {
+    background-color: #ffcc00;
+    border: none;
+  }
+  .btn-primary:hover {
+    background-color: #e6b800;
   }
 </style>
 </head>
@@ -43,57 +60,48 @@
 
 
 <!-- Projects Section -->
-<section id="projects" class="projects-section bg-light" id="projects">
-  <div class="container">
-    <h2 class="text-center">Projects</h2>
+<section id="projects" class="container py-5">
+  <h2 class="text-center mb-5">Projects</h2>
     <div class="row">
-      <!-- Project 1 -->
+      <!-- PDF Renaming Automation -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="https://learn.microsoft.com/en-us/fabric/media/fabric-icon.png" class="card-img-top" alt="Project 1">
+          <img src="static/pictures/pc.jpg" class="card-img-top" alt="Flask Web App">
           <div class="card-body">
-            <h5 class="card-title">Data Transformation Project</h5>
-            <p class="card-text">A detailted walkthrough of how to clean, enrich and model data using tools like Dataflows Gen 2, Lakehouse SQL endpoints and Spark Notebooks. Whether you're new to data transformation or looking to enhance your skills, this guide covers what you need to know to get started.</p>
-            <a href="https://medium.com/@lindaolela/transforming-data-with-microsoft-fabric-a-step-by-step-guide-for-beginners-a92098f6cd4c" class="btn btn-primary">Blog Post</a>
-            <a href="#" class="btn btn-secondary">Source Code</a>
+            <h5 class="card-title">PDF Renaming Automation</h5>
+            <p class="card-text">Automated renaming of PDF files based on an Excel file to streamline document management.</p>
+            <p><strong>Technologies:</strong> Python, Excel</p>
+            <a href="https://medium.com/@lindaolela/how-i-automated-the-renaming-of-pdf-files-with-python-ce8fbca92ac3" class="btn btn-primary">Blog Post</a>
+            <a href="#" class="btn btn-secondary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
-      <!-- Project 2 -->
+      <!-- Flask Stock Trading App -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="https://repository-images.githubusercontent.com/614691172/0c2bee49-690f-4863-ab79-bf056fec0e74" class="card-img-top" alt="Project 2">
+          <img src="static/pictures/hole.jpg" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Data Analysis using SQL</h5>
-            <p class="card-text"> Methodical problem-solving using SQL. Learn about best practices in query writing and data analysis. This project illustrated the power of structured queries in uncovering hidden connections within data.</p>
+            <h5 class="card-title">Flask Stock Trading App</h5>
+            <p class="card-text">A web application that allows users to track stock prices in real-time and manage portfolios.</p>
+            <p><strong>Technologies:</strong> Flask, Python, JavaScript, SQL, HTML/CSS</p>
             <a href="https://medium.com/@lindaolela/how-i-solved-the-mystery-of-the-stolen-cs50-duck-9f08805db692" class="btn btn-primary">Blog Post</a>
-            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary">Source Code</a>
+            <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
-      </div>
-      <!-- Project 3 -->
+      <!-- Portfolio Website -->
       <div class="col-md-4 mb-4">
         <div class="card">
           <img src="static/pictures/dice.jpg" class="card-img-top" alt="Project 3">
           <div class="card-body">
-            <h5 class="card-title">Flask Stock Trading App</h5>
-            <p class="card-text">Skilled in front-end and back-end development. Completed a project building a Flask web app with dynamic frontend-backend interactions. Experienced with GitHub for version control and project hosting.
-              Technologies used include:</p>
-              <ul>
-                <li>Python</li>
-                <li>JavaScript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>SQLite</li>
-              </ul>
+            <h5 class="card-title">Portfolio Website</h5>
+            <p class="card-text">My personal portfolio website to showcase projects and skills.</p>
+            <p><strong>Technologies:</strong> HTML, CSS, Bootstrap</p>
             <a href="#" class="btn btn-primary">Blog Post</a>
             <a href="#" class="btn btn-secondary">Source Code</a>
           </div>
         </div>
       </div>
     </div>
-
-  </div>
 </section>
 
 
