--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   }
   .card {
     background-color: #1e1e1e;
+    color: #e0e0e0;
     border: none;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
