debug projects section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <a href="https://github.com/code50/130731715/blob/main/week7/fiftyville/log.sql" class="btn btn-secondary"  target="_blank">View on GitHub</a> 
           </div>
         </div>
+      </div>
       <!-- Portfolio Website -->
       <div class="col-md-4 mb-4">
         <div class="card">
