--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
   .btn-primary:hover {
     background-color: #e6b800;
   }
+  #about {
+    background-color: #1e1e1e;
+    padding: 60px 0;
+    color: #e0e0e0;
+  }
+  #about h2 {
+    color: #ffcc00;
+    font-size: 36px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  #about .bio {
+    font-size: 18px;
+    line-height: 1.8;
+    margin: 0 auto;
+    max-width: 800px; /* Limit width for readability */
+    text-align: center;
+  }
+  .profile-img {
+    border-radius: 50%; /* Circular image */
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 20px auto;
+    display: block;
+  }
 </style>
 </head>
 <body>
@@ -168,6 +194,8 @@
  <!-- About Section -->
  <section id="about" class="container py-5">
   <h2>About Me</h2>
+  <img src="static/pictures/Profilepic.PNG" alt="Linda" class="profile-img">
+  <div class="bio">
   <p>
     Hi, I'm <strong>Linda</strong,> a dedicated software developer with a passion for solving real-world problems through technology.
     My journey into software development bagan when I realised how much I enjoyed building and automating solutions, 
@@ -186,7 +214,8 @@
   <p>
     Outside of coding, I enjoy writing about my projects and sharing insights with the developer community through platforms like <strong>Medium</strong> and <strong>LinkedIn</strong>.
   </p>
- </section>
+ </div>
+</section>
 
 <!-- Contact Me Section -->
 <section id="contact" class="container py-5">
