--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <img src="static/pictures/Profilepic.PNG" alt="Linda" class="profile-img">
   <div class="bio">
   <p>
-    Hi, I'm <strong>Linda</strong,> a dedicated software developer with a passion for solving real-world problems through technology.
+    Hi, I'm <strong>Linda</strong>, a dedicated software developer with a passion for solving real-world problems through technology.
     My journey into software development bagan when I realised how much I enjoyed building and automating solutions, 
     whether through Python scripting or web development.
   </p>
