--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <img src="static/pictures/database.jpg" class="card-img-top" alt="SQL">
           <div class="card-body">
             <h5 class="card-title">Database Management</h5>
-            <p class="card-text">Experience with database management systems and SQL including designing, querying, and managing databases. Proficient in data manipulation and ensuring data integrity for various applications.</p>
+            <p class="card-text">Experience with database management systems and SQL including designing, querying, and managing databases.</p>
             <a href="#" class="btn btn-outline-primary">Link to course or bootcamp</a>
           </div>
         </div>
