--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
           <div class="card-body">
               <p class="card-text">An in-depth guide on building a Flask application from scratch, including user authentication and real-time updates.</p>
               <p><small>Published on: September 08, 2024</small></p>
+              <span class="badge badge-secondary">Web Development</span>
               <a href="https://medium.com/@lindaolela/my-journey-from-concept-to-real-time-price-updates-e0cc755517c6" class="btn btn-primary" target="_blank">Read More</a>
               </div>
           </div>
