--- a/index.html
+++ b/index.html
@@ -148,6 +148,65 @@
       height: 150px;
     }
   }
+  /* Skills Section Styling */
+  #skills {
+        background-color: #1f1f1f; /* Dark background */
+        color: #ffffff; /* Light text */
+        padding: 60px 0;
+    }
+
+    #skills h2 {
+        color: #ffcc00; /* Accent color for section heading */
+        font-size: 36px;
+        margin-bottom: 40px;
+    }
+
+    .skills h5 {
+        margin-top: 15px;
+        margin-bottom: 10px;
+    }
+
+    .progress {
+        height: 8px;
+        background-color: #333333;
+        border-radius: 5px;
+        margin-bottom: 20px;
+    }
+
+    .progress-bar {
+        background-color: #ffcc00;
+    }
+
+    .fab, .fas {
+        color: #ffcc00; /* Icon color */
+        margin-bottom: 10px;
+    }
+
+    .text-center h3 {
+        margin-bottom: 30px;
+        font-size: 24px;
+        color: #ffcc00;
+    }
+
+    .text-center h5 {
+        color: #ffffff;
+        font-size: 18px;
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+        #skills h2 {
+            font-size: 28px;
+        }
+
+        .text-center h3 {
+            font-size: 22px;
+        }
+
+        .text-center h5 {
+            font-size: 16px;
+        }
+    }
 </style>
 </head>
 <body>
@@ -273,6 +332,96 @@
     </div>
   </div>
 </section>
+
+<!-- Skills Section -->
+<section id="skills" class="container py-5">
+  <h2 class="text-center mb-5">Skills</h2>
+
+  <!-- Programming Languages -->
+  <div class="row mb-4">
+      <div class="col-md-12">
+          <h3 class="text-center">Programming Languages</h3>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-python fa-3x"></i>
+          <h5>Python</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-html5 fa-3x"></i>
+          <h5>HTML5</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-js-square fa-3x"></i>
+          <h5>JavaScript</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+          </div>
+      </div>
+  </div>
+
+  <!-- Frameworks -->
+  <div class="row mb-4">
+      <div class="col-md-12">
+          <h3 class="text-center">Frameworks</h3>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fas fa-flask fa-3x"></i>
+          <h5>Flask</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-bootstrap fa-3x"></i>
+          <h5>Bootstrap</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-node-js fa-3x"></i>
+          <h5>Node.js</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+          </div>
+      </div>
+  </div>
+
+  <!-- Tools -->
+  <div class="row">
+      <div class="col-md-12">
+          <h3 class="text-center">Tools</h3>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-git fa-3x"></i>
+          <h5>Git</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fas fa-database fa-3x"></i>
+          <h5>SQL</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+          <i class="fab fa-microsoft fa-3x"></i>
+          <h5>Excel (Advanced)</h5>
+          <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+          </div>
+      </div>
+  </div>
+</section>
+
 
  <!-- Blog/Articles Section -->
 <section id="blog" class="container py-5">
