--- a/index.html
+++ b/index.html
@@ -503,35 +503,6 @@
  </div>
 </section>
 
-<!-- Contact Me Section -->
-<section id="contact" class="container py-5">
-  <h2>Contact Me</h2>
-  <p>Get in touch with me via email or follow me on GitHub or LinkedIn.</p>
-    <div class="row">
-      <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://www.linkedin.com/in/linda-olela-1794362a0/" target="_blank">
-          <img src="https://logospng.org/download/linkedin/logo-linkedin-icon-1536.png" alt="LinkedIn" class="social-icon">
-          LinkedIn
-        </a>
-      </div>
-      <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://github.com/olela28" target="_blank">
-          <img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt="GitHub" class="social-icon">
-          GitHub
-        </a>
-      </div>
-      <div class="col-lg-2 col-md-4 mb-4">
-        <a href="https://medium.com/@lindaolela" target="_blank">
-          <img src="https://miro.medium.com/v2/resize:fit:1200/0*K79yRSwdXz2Ll2tP.png" alt="Medium" class="social-icon">
-          Medium
-        </a>
-      </div>
-      <div class="col-lg-2">
-        <p><i class="fas fa-envelope"></i> olelalinda@gmail.com</p>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- Contact Section -->
 <section id="contact" class="container py-5">
@@ -567,7 +538,10 @@
       <a href="https://github.com/olela28" target="_blank" class="btn btn-outline-light mx-2">
           <i class="fab fa-github fa-2x"></i> GitHub
       </a>
-      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-warning">your-email@example.com</a></p>
+      <a href="https://medium.com/@lindaolela" target="_blank" class="btn btn-outline-light mx-2">
+        <i class="fab fa-medium fa-2x"></i> Medium
+      </a>
+      <p class="mt-3">Or send me an email at: <a href="mailto:olelalinda@gmail.com" class="text-warning">olelalinda@gmail.com</a></p>
   </div>
 </section>
 
